@@ -2,6 +2,7 @@ package com.example.libraryapp.service;
 
 import com.example.libraryapp.api.dto.BookDto;
 import com.example.libraryapp.api.dto.BookResponseDto;
+import com.example.libraryapp.api.dto.BookSearchCriteria;
 import com.example.libraryapp.api.mapper.BookMapper;
 import com.example.libraryapp.domain.Author;
 import com.example.libraryapp.domain.Book;
@@ -11,18 +12,20 @@ import com.example.libraryapp.repository.AuthorRepository;
 import com.example.libraryapp.repository.BookRepository;
 import com.example.libraryapp.repository.GenreRepository;
 import com.example.libraryapp.repository.PublisherRepository;
-import jakarta.persistence.EntityNotFoundException;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
+import org.springframework.web.server.ResponseStatusException;
 
 import java.math.BigDecimal;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -34,17 +37,105 @@ public class BookService {
     private final PublisherRepository publisherRepository;
     private final GenreRepository genreRepository;
     private final BookMapper bookMapper;
+    private final IndexService indexService;
 
-    // ==================== ПУБЛИЧНЫЕ МЕТОДЫ ====================
+    // ============= ЛАБА 3: Сложный поиск с фильтрацией и кэшированием =============
+    public List<BookResponseDto> searchBooks(BookSearchCriteria criteria, Pageable pageable) {
+        log.info("Searching books with criteria: {}", criteria);
+
+        // Пытаемся получить из кэша
+        List<BookResponseDto> cached = indexService.getFromCache(criteria, pageable);
+        if (cached != null) {
+            return cached;
+        }
+
+        // Если в кэше нет — выполняем запрос
+        List<Book> books = bookRepository.findBooksByComplexCriteria(
+                criteria.getAuthorName(),
+                criteria.getGenreName(),
+                criteria.getPublisherName(),
+                criteria.getMinPrice(),
+                criteria.getMaxPrice(),
+                criteria.getMinRating()
+        );
+
+        List<BookResponseDto> results = books.stream()
+                .map(bookMapper::toDto)
+                .collect(Collectors.toList());
+
+        // Сохраняем в кэш
+        indexService.putInCache(criteria, pageable, results);
+
+        return results;
+    }
+
+    // ============= ЛАБА 3: То же с пагинацией =============
+    public Page<BookResponseDto> searchBooksWithPagination(
+            BookSearchCriteria criteria, Pageable pageable) {
+        log.info("Searching books with criteria and pagination: {}, page: {}, size: {}",
+                criteria, pageable.getPageNumber(), pageable.getPageSize());
+
+        return bookRepository.findBooksByComplexCriteriaWithPagination(
+                criteria.getAuthorName(),
+                criteria.getGenreName(),
+                criteria.getPublisherName(),
+                criteria.getMinPrice(),
+                criteria.getMaxPrice(),
+                criteria.getMinRating(),
+                pageable
+        ).map(bookMapper::toDto);
+    }
+
+    // ============= ЛАБА 3: Native query =============
+    public List<BookResponseDto> searchBooksNative(BookSearchCriteria criteria) {
+        log.info("Searching books with native query, criteria: {}", criteria);
+
+        return bookRepository.findBooksByComplexCriteriaNative(
+                        criteria.getAuthorName(),
+                        criteria.getGenreName(),
+                        criteria.getPublisherName(),
+                        criteria.getMinPrice(),
+                        criteria.getMaxPrice(),
+                        criteria.getMinRating()
+                ).stream()
+                .map(bookMapper::toDto)
+                .collect(Collectors.toList());
+    }
 
     @Transactional
     public BookResponseDto createBook(BookDto bookDto) {
         log.info("Creating new book: {}", bookDto.getTitle());
         Book book = bookMapper.toEntity(bookDto);
 
-        setBookPublisher(book, bookDto.getPublisherId());
-        setBookAuthors(book, bookDto.getAuthorIds());
-        setBookGenres(book, bookDto.getGenreIds());
+        Publisher publisher = publisherRepository.findById(bookDto.getPublisherId())
+                .orElseThrow(() -> new ResponseStatusException(
+                        HttpStatus.NOT_FOUND,
+                        "Publisher not found with id: " + bookDto.getPublisherId()
+                ));
+        book.setPublisher(publisher);
+
+        Set<Author> authors = new HashSet<>(authorRepository.findAllById(bookDto.getAuthorIds()));
+        if (authors.size() != bookDto.getAuthorIds().size()) {
+            throw new ResponseStatusException(
+                    HttpStatus.NOT_FOUND,
+                    "Some authors not found for ids: " + bookDto.getAuthorIds()
+            );
+        }
+        book.setAuthors(authors);
+
+        if (bookDto.getGenreIds() != null && !bookDto.getGenreIds().isEmpty()) {
+            Set<Genre> genres = new HashSet<>(genreRepository.findAllById(bookDto.getGenreIds()));
+            if (genres.size() != bookDto.getGenreIds().size()) {
+                throw new ResponseStatusException(
+                        HttpStatus.NOT_FOUND,
+                        "Some genres not found for ids: " + bookDto.getGenreIds()
+                );
+            }
+            book.setGenres(genres);
+        }
+
+        // Инвалидируем кэш при создании
+        indexService.invalidateCache();
 
         Book savedBook = bookRepository.save(book);
         log.info("Book created successfully with id: {}", savedBook.getId());
@@ -60,18 +151,58 @@ public class BookService {
 
     public BookResponseDto getBookById(Long id) {
         log.debug("Getting book by id: {}", id);
-        return bookMapper.toDto(findBookById(id));
+        Book book = bookRepository.findById(id)
+                .orElseThrow(() -> new ResponseStatusException(
+                        HttpStatus.NOT_FOUND,
+                        "Book not found with id: " + id
+                ));
+        return bookMapper.toDto(book);
     }
 
     @Transactional
     public BookResponseDto updateBook(Long id, BookDto bookDto) {
         log.info("Updating book with id: {}", id);
-        Book book = findBookById(id);
+        Book book = bookRepository.findById(id)
+                .orElseThrow(() -> new ResponseStatusException(
+                        HttpStatus.NOT_FOUND,
+                        "Book not found with id: " + id
+                ));
 
-        updateBookFields(book, bookDto);
-        setBookPublisher(book, bookDto.getPublisherId());
-        setBookAuthors(book, bookDto.getAuthorIds());
-        setBookGenres(book, bookDto.getGenreIds());
+        book.setIsbn(bookDto.getIsbn());
+        book.setTitle(bookDto.getTitle());
+        book.setDescription(bookDto.getDescription());
+        book.setPublicationYear(bookDto.getPublicationYear());
+        book.setPrice(bookDto.getPrice());
+
+        Publisher publisher = publisherRepository.findById(bookDto.getPublisherId())
+                .orElseThrow(() -> new ResponseStatusException(
+                        HttpStatus.NOT_FOUND,
+                        "Publisher not found with id: " + bookDto.getPublisherId()
+                ));
+        book.setPublisher(publisher);
+
+        Set<Author> authors = new HashSet<>(authorRepository.findAllById(bookDto.getAuthorIds()));
+        if (authors.size() != bookDto.getAuthorIds().size()) {
+            throw new ResponseStatusException(
+                    HttpStatus.NOT_FOUND,
+                    "Some authors not found for ids: " + bookDto.getAuthorIds()
+            );
+        }
+        book.setAuthors(authors);
+
+        if (bookDto.getGenreIds() != null && !bookDto.getGenreIds().isEmpty()) {
+            Set<Genre> genres = new HashSet<>(genreRepository.findAllById(bookDto.getGenreIds()));
+            if (genres.size() != bookDto.getGenreIds().size()) {
+                throw new ResponseStatusException(
+                        HttpStatus.NOT_FOUND,
+                        "Some genres not found for ids: " + bookDto.getGenreIds()
+                );
+            }
+            book.setGenres(genres);
+        }
+
+        // Инвалидируем кэш при обновлении
+        indexService.invalidateCache();
 
         Book updatedBook = bookRepository.save(book);
         log.info("Book updated successfully");
@@ -82,9 +213,16 @@ public class BookService {
     public void deleteBook(Long id) {
         log.info("Deleting book with id: {}", id);
         if (!bookRepository.existsById(id)) {
-            throw new EntityNotFoundException("Book not found with id: " + id);
+            throw new ResponseStatusException(
+                    HttpStatus.NOT_FOUND,
+                    "Book not found with id: " + id
+            );
         }
         bookRepository.deleteById(id);
+
+        // Инвалидируем кэш при удалении
+        indexService.invalidateCache();
+
         log.info("Book deleted successfully");
     }
 
@@ -93,7 +231,7 @@ public class BookService {
         return bookRepository.findByAuthorName(authorName)
                 .stream()
                 .map(bookMapper::toDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public List<BookResponseDto> findBooksByGenre(String genreName) {
@@ -101,7 +239,7 @@ public class BookService {
         return bookRepository.findByGenreName(genreName)
                 .stream()
                 .map(bookMapper::toDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public List<BookResponseDto> findBooksByPriceRange(BigDecimal minPrice, BigDecimal maxPrice) {
@@ -109,15 +247,16 @@ public class BookService {
         return bookRepository.findByPriceBetween(minPrice, maxPrice)
                 .stream()
                 .map(bookMapper::toDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public List<BookResponseDto> getAllBooksWithDetails() {
         log.info("Getting all books with details (authors, genres, publisher)");
-        return bookRepository.findAllWithDetails()
-                .stream()
+        List<Book> books = bookRepository.findAllWithDetails();
+        log.debug("Loaded {} books with details", books.size());
+        return books.stream()
                 .map(bookMapper::toDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public List<BookResponseDto> getAllBooksWithNPlus1Problem() {
@@ -133,64 +272,21 @@ public class BookService {
 
         return books.stream()
                 .map(bookMapper::toDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public Book createBookWithoutTransaction(BookDto bookDto) {
         log.warn("DEMONSTRATING PARTIAL SAVE WITHOUT @Transactional");
-        return saveBookWithTempEntities(bookDto);
-    }
 
-    @Transactional
-    public Book createBookWithTransaction(BookDto bookDto) {
-        log.info("DEMONSTRATING ATOMIC SAVE WITH @Transactional");
-        return saveBookWithTempEntities(bookDto);
-    }
+        Publisher tempPublisher = new Publisher();
+        tempPublisher.setName("TEMP_" + System.currentTimeMillis());
+        tempPublisher = publisherRepository.save(tempPublisher);
+        log.info("Temporary publisher saved with id: {}", tempPublisher.getId());
 
-    // ==================== ПРИВАТНЫЕ ВСПОМОГАТЕЛЬНЫЕ МЕТОДЫ ====================
-
-    private Book findBookById(Long id) {
-        return bookRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Book not found with id: " + id));
-    }
-
-    private void setBookPublisher(Book book, Long publisherId) {
-        Publisher publisher = publisherRepository.findById(publisherId)
-                .orElseThrow(() -> new EntityNotFoundException(
-                        "Publisher not found with id: " + publisherId
-                ));
-        book.setPublisher(publisher);
-    }
-
-    private void setBookAuthors(Book book, Set<Long> authorIds) {
-        Set<Author> authors = new HashSet<>(authorRepository.findAllById(authorIds));
-        if (authors.size() != authorIds.size()) {
-            throw new EntityNotFoundException("Some authors not found for ids: " + authorIds);
-        }
-        book.setAuthors(authors);
-    }
-
-    private void setBookGenres(Book book, Set<Long> genreIds) {
-        if (genreIds != null && !genreIds.isEmpty()) {
-            Set<Genre> genres = new HashSet<>(genreRepository.findAllById(genreIds));
-            if (genres.size() != genreIds.size()) {
-                throw new EntityNotFoundException("Some genres not found for ids: " + genreIds);
-            }
-            book.setGenres(genres);
-        }
-    }
-
-    private void updateBookFields(Book book, BookDto bookDto) {
-        book.setIsbn(bookDto.getIsbn());
-        book.setTitle(bookDto.getTitle());
-        book.setDescription(bookDto.getDescription());
-        book.setPublicationYear(bookDto.getPublicationYear());
-        book.setPrice(bookDto.getPrice());
-    }
-
-    private Book saveBookWithTempEntities(BookDto bookDto) {
-        Publisher tempPublisher = createAndSaveTempPublisher();
-        Author tempAuthor = createAndSaveTempAuthor();
+        Author tempAuthor = new Author();
+        tempAuthor.setName("TEMP_AUTHOR_" + System.currentTimeMillis());
+        tempAuthor = authorRepository.save(tempAuthor);
+        log.info("Temporary author saved with id: {}", tempAuthor.getId());
 
         Book book = bookMapper.toEntity(bookDto);
         book.setPublisher(tempPublisher);
@@ -201,18 +297,36 @@ public class BookService {
             throw new IllegalStateException("Simulated error during book creation");
         }
 
-        return bookRepository.save(book);
+        Book savedBook = bookRepository.save(book);
+        log.info("Book saved successfully");
+        return savedBook;
     }
 
-    private Publisher createAndSaveTempPublisher() {
+    @Transactional
+    public Book createBookWithTransaction(BookDto bookDto) {
+        log.info("DEMONSTRATING ATOMIC SAVE WITH @Transactional");
+
         Publisher tempPublisher = new Publisher();
         tempPublisher.setName("TEMP_" + System.currentTimeMillis());
-        return publisherRepository.save(tempPublisher);
-    }
+        tempPublisher = publisherRepository.save(tempPublisher);
+        log.info("Temporary publisher saved with id: {}", tempPublisher.getId());
 
-    private Author createAndSaveTempAuthor() {
         Author tempAuthor = new Author();
         tempAuthor.setName("TEMP_AUTHOR_" + System.currentTimeMillis());
-        return authorRepository.save(tempAuthor);
+        tempAuthor = authorRepository.save(tempAuthor);
+        log.info("Temporary author saved with id: {}", tempAuthor.getId());
+
+        Book book = bookMapper.toEntity(bookDto);
+        book.setPublisher(tempPublisher);
+        book.getAuthors().add(tempAuthor);
+
+        if (bookDto.getTitle() != null && bookDto.getTitle().contains("error")) {
+            log.error("Simulating error during save - transaction will rollback!");
+            throw new IllegalStateException("Simulated error during book creation");
+        }
+
+        Book savedBook = bookRepository.save(book);
+        log.info("Book saved successfully");
+        return savedBook;
     }
 }
